# deskcycle

./: CMakeLists.txt  detector.cpp  detector.hpp  detector_fsm.hpp  main.cpp  output.txt
cmake/: BoostSML.cmake  FindSDL2.cmake
